--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "angular-font-awesome": "^3.1.2",
     "angular-particle": "^1.0.4",
     "angular-typing-animation": "^0.5.4",
+    "angularfire2": "^5.1.3",
     "core-js": "^2.5.4",
+    "firebase": "^6.0.4",
     "ngx-materialize": "^6.1.3",
     "rxjs": "~6.3.3",
     "rxjs-compat": "^6.5.1",
