--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "rxjs": "~6.3.3",
     "rxjs-compat": "^6.5.1",
     "tslib": "^1.9.0",
+    "typed.js": "^2.0.10",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
