--- a/.gitignore
+++ b/.gitignore
@@ -9,7 +9,9 @@
 
 # dependencies
 /node_modules
-
+/.firebase
+/.firebaserc
+/firebase.json
 # profiling files
 chrome-profiler-events.json
 speed-measure-plugin.json
